hphp/hack/test/typecheck/inout/bad_inout_use_arg19.php.exp
File "bad_inout_use_arg19.php", line 15, characters 11-15:
You cannot mutate this (Typing[4011])
File "bad_inout_use_arg19.php", line 11, characters 10-23:
This is an object of type Pair
